...
   <View style={styles.container}>
      
      <View style={styles.containerButton}>
         <Text style={styles.price}>R${newPrice.toFixed(2)}</Text>

         <TouchableOpacity style = {styles.statusContainer} onPress={handleCheckout}>
            <Text testID='button-checkout' style={styles.textButton}>Check out</Text>
            <FontAwesome6 name="basket-shopping" size={16} color="white" />
         </TouchableOpacity>
      </View>

   </View>
    
...
