appId: com.ifarma.app
name: Teste de Compra - Alterar Quantidade
---
- openLink: exp://127.0.0.1:8081
- tapOn:
    id: input-username
- inputText: "John Bony"
- tapOn:
    id: input-password
- inputText: "123ddps"
- tapOn:
    id: button-logIn
- tapOn:
    id: Dipirona
- tapOn:
    id: button-plus
- tapOn:
    id: button-plus
- assertVisible: "Dipirona"
- assertVisible: "4.8"
- assertVisible:
    id: "display-amout"
    text: "3"
- assertVisible: "R$41.97"
