appId: com.ifarma.app
name: Teste de Compra - Alterar Quantidade
---
- openLink: exp://127.0.0.1:8081
- tapOn:
    id: input-username
- inputText: "John Bony"
- tapOn:
    id: input-password
- inputText: "123ddps"
- tapOn:
    id: button-logIn
- tapOn:
    id: Paracetamol 500mg
- tapOn:
    id: button-plus
- assertVisible: "Paracetamol 500mg"
- assertVisible: "4.7"
- assertVisible:
    id: "display-amout"
    text: "2"
- assertVisible: "R$19.78"
- tapOn:
    id: button-checkout
